--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <div class="overlay">
     <div class="container">
       <img src="https://files.catbox.moe/t2j9qz.jpg" class="logo" alt="Logo" />
-      <h1 class="headline">Hi, I'm Alpin-Developer</h1>
+      <h1 class="headline">Hi, I'm AlpinX</h1>
       <p class="subtext">Silakan pilih metode pembayaran di bawah ini</p>
 
       <div class="buttons">
-        <button onclick="showInfo('DANA', '081234567890 MUHAMMAD ALFIN CANDRA WIYONO')">DANA</button>
-        <button onclick="showInfo('SHOPEPAY', '081991819101 a/n MUHAMMAD ALFIN CANDRA WIYONO')">SHOPEPAY</button>
-        <button onclick="showInfo('BRI', 'KOSONG a/n MUHAMMAD ALFIN CANDRA WIYONO')">BRI</button>
+        <button onclick="showInfo('DANA', '085691454015')">DANA</button>
+        <button onclick="showInfo('SHOPEPAY', '081991819101 a/n')">SHOPEPAY</button>
+        <button onclick="showInfo('BRI', 'KOSONG a/n')">BRI</button>
         <button onclick="showQRIS()">QRIS</button>
       </div>
 
